--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "body-parser": "~1.16.0",
     "connect-mongo": "^2.0.1",
+    "connect-mongodb-session": "^2.0.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.0",
